[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ============================================================================
# LIBRARY CONFIGURATION
# The main library is a Python extension module using PyO3
# ============================================================================
[lib]
name = "spider"
crate-type = ["cdylib"]

# ============================================================================
# BINARY CONFIGURATION
# The server binary provides REST + WebSocket API for realtime visualization
# ============================================================================
[[bin]]
name = "spider-server"
path = "src/bin/server.rs"

# ============================================================================
# DEPENDENCIES
# ============================================================================
[dependencies]
# --- PyO3: Python bindings ---
pyo3 = { version = "0.20", features = ["extension-module"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      # JSON serialization for API responses
bincode = "1.3"         # Binary serialization for DB persistence

# --- Async Runtime & Web Server ---
tokio = { version = "1", features = ["full"] }          # Async runtime
axum = { version = "0.7", features = ["ws"] }           # Web framework with WebSocket
tower = "0.4"                                            # Middleware utilities
tower-http = { version = "0.5", features = ["cors", "fs"] }  # CORS + static files

# --- Utilities ---
futures = "0.3"         # Async stream utilities for WebSocket
rayon = "1.8"           # Parallel processing
anyhow = "1.0"          # Error handling
hnsw_rs = "0.3"         # HNSW vector index

# --- HTTP Client (for auto-notify from SpiderDB) ---
reqwest = {
  version = "0.12",
  default-features = false,
  features = ["rustls-tls", "blocking"]
}
